@@ -8,8 +8,9 @@ dctrl-tools (2.23) UNRELEASED; urgency=low
     _FORTIFY_SOURCE, (see bug #674917), causing spurious warnings upon
     mblen initialization calls, switch to using mbrlen in tbl-dctrl.c (a
     good idea in any case).
+  * Add -Wextra to non-package builds (and clean up the resulting warnings).
 
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Thu, 07 Jun 2012 12:08:47 +0300
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Fri, 08 Jun 2012 19:42:51 +0300
 
 dctrl-tools (2.22.2) unstable; urgency=low
 
